k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: templatz
  namespace: templatz-prod
  labels:
    app: templatz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: templatz
  template:
    metadata:
      labels:
        app: templatz
    spec:
      containers:
      - name: templatz
        image: arunjadhav16/templatz:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
