k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: templatz-service
  namespace: templatz-prod
spec:
  selector:
    app: templatz
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
