k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: templatz-ingress
  namespace: templatz-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # This annotation tells ExternalDNS to create the Route53 record:
    external-dns.alpha.kubernetes.io/hostname: arun.run.place
spec:
  tls:
  - hosts:
    - arun.run.place
    secretName: templatz-tls
  rules:
  - host: arun.run.place
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: templatz-service
            port:
              number: 80
